Update demo link.

--- a/src/styl/priority-nav.styl
+++ b/src/styl/priority-nav.styl
@@ -8,7 +8,7 @@ bg-color = #d1c6b8
 
 html
     font-family Courier, Courier New, monospace
-    font-size 16px
+    font-size 100%
     line-height 1.5
     color text-color
     background-color rgb(234,234,234)
